--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -149,16 +149,30 @@ header {
   gap: 2rem;
 }
 
-.button {
-  border: none;
-  outline: none;
-  background-color: transparent;
+.button:link,
+.button:visited {
+  text-decoration: none;
+}
+
+.button--navigation__container {
+  border: 2px solid var(--color-secondary);
+  border-radius: 15px;
+  position: relative;
+}
+
+.button--navigation__container--white {
+  border: 2px solid var(--color-white);
 }
 
 .button--navigation {
   padding: 0.5rem;
-  border: 2px solid var(--color-secondary);
-  border-radius: 15px;
+  transform: translate(0.1rem, 0.2rem);
+  text-align: center;
+}
+
+.button-arrow--left {
+  transform: rotate(180deg) translate(0.1rem, -0.2rem);
+  padding: 0.5rem;
 }
 
 .btn:link,
@@ -267,6 +281,10 @@ header {
   transform: scale(1.2);
   border: 0.3rem solid var(--color-white);
   border-radius: 10px;
+}
+
+.arrow--left {
+  transform: rotate(180deg) scale(1.2);
 }
 
 .hero__featured__products {
