--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -18,6 +18,8 @@
   --color-light-for-text: #555;
   --color-lighter-for-text: #999;
   --color-footer-navigation-list-color: #e1e1e1;
+  --color-blue-for-link: #2f56f1;
+  --color-category-background: #ffae0d1a;
 }
 
 * {
@@ -44,7 +46,7 @@ header {
 }
 
 .section-container {
-  max-width: 110rem;
+  max-width: 118.6rem;
   margin: auto;
 }
 
@@ -66,9 +68,18 @@ header {
   gap: 1rem;
 }
 
-.section__container__header__text {
+.section__container__header__text:link,
+.section__container__header__text:visited {
   font-size: 1.4rem;
   color: var(--color-secondary);
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.section__container__header__text:hover,
+.section__container__header__text:active {
+  color: var(--color-blue-for-link);
+  text-decoration: underline;
 }
 
 .header__starter {
@@ -141,6 +152,7 @@ header {
 }
 
 .input__search {
+  font-size: 1.7rem;
   outline: none;
   width: 58.2rem;
   height: 4rem;
@@ -150,9 +162,10 @@ header {
 }
 
 .search-icon {
+  font-size: 1.7rem;
   position: absolute;
   top: 50%;
-  left: 2rem;
+  left: 1.6rem;
   transform: translateY(-50%);
 }
 
@@ -183,30 +196,52 @@ header {
   gap: 2rem;
 }
 
-.button:link,
-.button:visited {
-  text-decoration: none;
+.button--navigation {
+  min-width: 3.2rem;
+  border: 2px solid rgb(48, 52, 63, 0.4);
+  height: 3.2rem;
+  display: flex;
+  border-radius: 12px;
+  backface-visibility: hidden;
 }
 
-.button--navigation__container {
-  border: 2px solid var(--color-secondary);
-  border-radius: 15px;
-  position: relative;
+.button--navigation:hover {
+  cursor: pointer;
+  background-color: var(--color-link);
+  border-color: var(--color-link);
+  animation: button--navigation-animation 0.4s ease-in;
+  backface-visibility: hidden;
+}
+
+@keyframes button--navigation-animation {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.1);
+  }
+}
+
+.button--navigation--white {
+  border: 2px solid #fff;
+}
+
+.button--slider {
+  margin: auto;
+  min-width: 2.4rem;
+}
+
+.button--slider:hover {
+  fill: #fff;
 }
 
 .button--navigation__container--white {
   border: 2px solid var(--color-white);
 }
 
-.button--navigation {
-  padding: 0.5rem;
-  transform: translate(0.1rem, 0.2rem);
-  text-align: center;
-}
-
 .button-arrow--left {
-  transform: rotate(180deg) translate(0.1rem, -0.2rem);
-  padding: 0.5rem;
+  transform: rotate(180deg);
 }
 
 .btn:link,
@@ -302,7 +337,7 @@ header {
 /* ******************** */
 
 .hero {
-  max-width: 110rem;
+  max-width: 118.6rem;
   background-color: aqua;
   margin: auto;
 }
@@ -363,7 +398,11 @@ header {
   border: 1px solid #000;
   border-radius: 2rem;
   width: 46%;
+  text-decoration: none;
   align-items: center;
+  color: var(--color-black-for-text);
+  font-weight: 500;
+  font-size: 1.2rem;
 }
 
 .product img {
@@ -373,11 +412,17 @@ header {
 .product__discounted {
   display: flex;
   flex: 3;
-  width: 100%;
+}
+
+.product__discounted__image__container {
+  width: 34.8rem;
+  max-height: 30rem;
+  display: flex;
 }
 
 .product__discounted img {
-  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
 
 .hero__featured__product__link:link,
@@ -385,7 +430,17 @@ header {
   text-decoration: none;
   color: var(--color-black-for-text);
   font-size: 1.4rem;
-  text-align: center;
+  align-self: flex-start;
+  margin: auto;
+}
+
+.product__description:hover,
+.product__description:active,
+.hero__featured__product__link:hover,
+.hero__featured__product__link:active {
+  text-decoration: underline;
+  color: var(--color-blue-for-link);
+  font-weight: 500;
 }
 
 /* ******************** */
@@ -427,15 +482,16 @@ header {
   width: 17.8rem;
   height: 32.8rem;
   justify-content: space-around;
-  /* border: 1px solid var(--color-lighter-for-text); */
-  box-shadow: 0 0 0 1px var(--color-lighter-for-text);
+  border: 1px solid rgb(0, 0, 0, 0.2);
   border-radius: 20px;
   padding: 1.2rem 1.2rem 1.7rem 1.2rem;
   position: relative;
+  transition: all 0.3s ease-in;
 }
 
 .catalogue-item:hover {
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.1);
+  border-color: transparent;
 }
 
 .catalogue-item:hover .catalogue-item__icon__container {
@@ -519,8 +575,25 @@ header {
   fill: green;
 }
 
+.product__name__container {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  height: 3rem;
+}
+
 .product__name {
   font-size: 1.4rem;
+}
+
+.product__img__container {
+  width: 15.4rem;
+  height: 14.6rem;
+}
+
+.product__img {
+  width: 100%;
 }
 
 .product__rating {
@@ -535,8 +608,17 @@ header {
   color: var(--color-light-for-text);
 }
 
+.product__brand__container {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  height: 1.4rem;
+}
+
 .product__brand {
   color: var(--color-lighter-for-text);
+  font-size: 1.4rem;
 }
 
 .product__sale {
@@ -554,8 +636,8 @@ header {
   background-color: #2f56f1;
   border-radius: 20px 0;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -1px;
+  left: -1px;
 }
 
 .product__sale__tag--pink {
@@ -584,12 +666,18 @@ header {
   height: 16rem;
   justify-content: center;
   gap: 1rem;
-  border: 2px solid var(--color-main);
+  border: 1px solid var(--color-link);
+  background-color: var(--color-category-background);
   border-radius: 20px;
   padding: 1.8rem 1.6rem;
   position: relative;
   align-items: center;
   text-align: center;
+  transition: all 0.4s ease-in-out;
+}
+
+.category__item:hover {
+  border: 3px solid var(--color-main);
 }
 
 .category__item__img {
@@ -600,6 +688,14 @@ header {
   font-size: 1.6rem;
   font-weight: 500;
   color: var(--color-black-for-text);
+  /* transition: all 0.4s ease-in-out; */
+
+  /* transition: all 3s ease-in; */
+}
+
+.category__item:hover .category__name {
+  text-decoration: underline;
+  transition: all 0.4s ease-in-out;
 }
 
 .category__link:link,
@@ -661,7 +757,7 @@ header {
 /* ******************** */
 
 .sale-posters__third {
-  margin-top: 2.6rem;
+  margin: 2.6rem;
 }
 
 .sale-posters__img-3 {
