--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -191,6 +191,12 @@ header {
   background-color: var(--color-footer-navigation-list-color);
 }
 
+.category__img {
+  max-width: 6.4rem;
+  max-height: 6.4rem;
+  justify-self: center;
+}
+
 .btn__container {
   display: flex;
   gap: 2rem;
@@ -664,7 +670,7 @@ header {
   flex-flow: column wrap;
   width: 17.8rem;
   height: 16rem;
-  justify-content: center;
+  justify-content: space-between;
   gap: 1rem;
   border: 1px solid var(--color-link);
   background-color: var(--color-category-background);
@@ -673,21 +679,36 @@ header {
   position: relative;
   align-items: center;
   text-align: center;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .category__item:hover {
   border: 3px solid var(--color-main);
+  padding: 1.6rem 1.4rem;
 }
 
 .category__item__img {
   width: 6.4rem;
+  height: 6.4rem;
+}
+
+.category__name__container {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  height: 4rem;
+  width: 14.6rem;
+  line-height: 40px;
 }
 
 .category__name {
   font-size: 1.6rem;
   font-weight: 500;
   color: var(--color-black-for-text);
+  line-height: 1.2;
+  display: inline-block;
+  vertical-align: middle;
   /* transition: all 0.4s ease-in-out; */
 
   /* transition: all 3s ease-in; */
